--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -2,6 +2,10 @@
     display: block;
       text-align: center;
       margin: auto;
-      max-width: 300px;
+      width: 100%;
       align-items: center;
   }
+  #map2 {
+    height: 500px;
+    width: 100%;
+   }
