--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,5 +11,5 @@
 <div>my payment accounts' details</div>
 <button (click)="updatePaymentDetails()">update payment details</button>
 <button (click)="addPaymentDetails()">add payment account</button>
-<button (click)="getuser()">{{usercode}}</button>
+<button (click)="getuser()" >{{newUser.username}}</button>
 <button>add parking spot</button>
