--- a/src/app/components/add-imid-search/add-imid-search.component.html
+++ b/src/app/components/add-imid-search/add-imid-search.component.html
@@ -4,7 +4,7 @@
         <div>
             <mat-form-field appearance="fill">
                 <mat-label>Search Code</mat-label>
-                 <input matInput placeholder="code"  [(ngModel)]="newSearch.code" name="code" type="text" #code="ngModel" required >
+                 <input matInput placeholder="code"  [(ngModel)]="newSearch.Code" name="Code" type="text" #code="ngModel" required >
                   
             </mat-form-field>
         </div>
