--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,13 +18,13 @@
                <div>
                <mat-form-field appearance="fill" >
                    <mat-label>User name</mat-label>
-                   <input value="" matInput placeholder="username" name="username" [(ngModel)]="newUser.username" type="text" #username="ngModel" required minlength="5" maxlength="20">
+                   <input value="" matInput placeholder="username" name="Username" [(ngModel)]="newUser.Username" type="text" #username="ngModel" required minlength="5" maxlength="20">
                  </mat-form-field>
                </div>
                <div>
                  <mat-form-field appearance="fill">
                    <mat-label>Password</mat-label>
-                   <input matInput  placeholder="password" name="userpassword" [(ngModel)]="newUser.userpassword" type="password" #userpassword="ngModel" required minlength="5" maxlength="12">
+                   <input matInput  placeholder="password" name="UserPassword" [(ngModel)]="newUser.UserPassword" type="password" #userpassword="ngModel" required minlength="5" maxlength="12">
                  </mat-form-field>
                </div>
                <div class="btnfrm">
