--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,3 +1,8 @@
+<div>
+  <img style="    max-width: 250px;
+  " src="assets/images/logo.png"  />
+  <!--<h1>ParkMark</h1>-->
+</div>
 <button (click)="imidSearch()">quick search</button><button (click)="advancedSearch()">advanced search</button>
 
 <div class="map" height="500px">
