--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,5 +1,8 @@
-<h1>ParkMark</h1>
-<h2>Sign Up</h2>
+<div>
+    <img style="    max-width: 250px;
+    " src="assets/images/logo.png"  />
+    <!--<h1>ParkMark</h1>-->
+  </div><h2>Sign Up</h2>
 <div class="wrapdiv">
     <form  novalidate  (submit)="SignUp(frm)" #frm="ngForm">
       
